fix: Fix image position, and add attempt to fix footer on mobile

--- a/style.css
+++ b/style.css
@@ -61,9 +61,10 @@ button:hover {
 }
 
 .icon {
+  border-radius: 20px;
   height: 80px;
   left: 20px;
-  border-radius: 20px;
+  position: absolute;
   z-index: 1;
 }
 
@@ -310,6 +311,7 @@ p {
   .footer {
     font-size: 10px;
     white-space: nowrap;
+    margin-top: 10px;
   }
 
   .footer span {
